--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="@dimen/manu_btn_margin"
         android:text="@string/start_button"
         android:padding="@dimen/manu_btn_padding"
         android:textSize="@dimen/menu_textsize"
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/manu_btn_margin"
         android:text="@string/setting_button"
         android:padding="@dimen/manu_btn_padding"
         android:textSize="@dimen/menu_textsize"
