--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="menu_textsize">20sp</dimen>
-    <dimen name="manu_btn_padding">10dp</dimen>
-    <dimen name="manu_btn_margin">30dp</dimen>
-    <dimen name="padding_between_elements">10dp</dimen>
-    <dimen name="big_text">40sp</dimen>
+    <dimen name="header_padding">12dp</dimen>
+    <dimen name="header_text_size">20sp</dimen>
 </resources>
