--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <dimen name="button_margin">10dp</dimen>
+<resources>
+    <dimen name="header_padding">12dp</dimen>
+    <dimen name="header_text_size">20sp</dimen>
 </resources>
